--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
             <div class="content">
                 <div class="video">
-                    <img src="HD-wallpaper-beautiful-landscape-digital-art-thumbnail.jpg" alt="" class="thumbnail">
+                    <img src="349208-4k-wallpaper.jpg" alt="" class="thumbnail">
 
                     <div class="infor">
                         <img class="avt" src="channels4_profile (6).jpg" alt="" width="20px" >
